Adjusted default container opts.